--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Created by Andreas Loizou
         </div>
     </div>
     <footer class="site-footer">
-        <p>Another thing made with <span class="pomegranate">❤︎</span> by <a href="https://www.linkedin.com/in/loizouandreas/">Andreas Loizou</a>. Find this on <a href="https://github.com/lack3r/InspireMe">Github</a>.
+        <p>Another thing made with <span class="pomegranate">❤︎</span> by <a href="https://www.linkedin.com/in/loizouandreas/">Andreas Loizou</a>. Find this on <a href="https://github.com/lack3r/The-Simpsons-Daily-Scrum">Github</a>.
         </p>
     </footer>
 </body>
