--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ Created by Andreas Loizou
 -->
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" rel="stylesheet">
 <style>
