--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@ Created by Andreas Loizou
 |_____/_/   \_\____|_|\_\____/|_| \_\
 -->
 
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8">
+<meta http-equiv="x-ua-compatible" content="ie=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<title>Daily Standup</title>
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" rel="stylesheet">
 <style>
