--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@ Created by Andreas Loizou
 		text-align: center;
 		font-weight: 600;
 		overflow: hidden;
-		/*-webkit-background-size: cover;
-		-moz-background-size: cover;
-		-o-background-size: cover;
-		background-size: cover;*/
+		-webkit-background-size: 30%;
+		-moz-background-size: 30%;
+		-o-background-size: 30%;
+		background-size: 30%;
 	}
 
 	.text {
