--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Created by Andreas Loizou
 
 <title>Daily Standup</title>
 
-<meta name="description" content="Are you in a Scrum Team? Isn't it a bit boring when the same person starts the standup? You can change that NOW! Use The Simpsons Daily Scrum, to find out who from your team should start the standup today in a fun way. Let's make Scrum fun again!">
+<meta name="description" content="Are you in a Scrum Team? Isn't it a bit boring when the same person starts the standup every single day? You can change that NOW! Use The Simpsons Daily Scrum, to find out who from your team should start the standup today in a fun way. Let's make Scrum fun again!">
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" rel="stylesheet">
 <style>
