--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@ Created by Andreas Loizou
 
 <title>Daily Standup</title>
 
-<meta name="description" content="Are you in a Scrum Team? Isn't it a bit boring when the same person starts the standup every single day? You can change that NOW! Use The Simpsons Daily Scrum, to find out who from your team should start the standup today in a fun way. Let's make Scrum fun again!">
+<meta name="description" content="Use The Simpsons Daily Scrum, to find out who from your team should start the standup today in a fun way. Let's make Scrum fun again!">
+<meta name="subject" content="Are you in a Scrum Team? Isn't it a bit boring when the same person starts the standup every single day? You can change that NOW! Use The Simpsons Daily Scrum, to find out who from your team should start the standup today in a fun way. Let's make Scrum fun again!">
+
+<meta property="og:url" content="http://the-simpsons-daily-scrum.aloizou.com/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Daily Standup">
+<meta property="og:image" content="http://the-simpsons-daily-scrum.aloizou.com/background.jpg">
+<meta property="og:description" content="Use The Simpsons Daily Scrum, to find out who from your team should start the standup today in a fun way. Let's make Scrum fun again!">
+<meta property="og:site_name" content="Daily Standup">
+<meta property="og:locale" content="en_US">
+<meta property="article:author" content="Andreas Loizou">
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" rel="stylesheet">
 <style>
