--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Created by Andreas Loizou
 <meta property="og:url" content="http://the-simpsons-daily-scrum.aloizou.com/">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Daily Standup">
-<meta property="og:image" content="http://the-simpsons-daily-scrum.aloizou.com/background.jpg">
+<meta property="og:image" content="the-simpsons-daily-scrum.aloizou.com/background.jpg">
 <meta property="og:description" content="Use The Simpsons Daily Scrum, to find out who from your team should start the standup today in a fun way. Let's make Scrum fun again!">
 <meta property="og:site_name" content="Daily Standup">
 <meta property="og:locale" content="en_US">
