--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Created by Andreas Loizou
 	}
 
 	.refresh {
-		background: #FFF url(http://goo.gl/xDdF7X) center/36px no-repeat;
+		background: #FFF url(refresh.svg) center/36px no-repeat;
 		height: 56px;
 		width: 56px;
 		margin: 1em;
