--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@ Created by Andreas Loizou
 <meta property="og:locale" content="en_US">
 <meta property="article:author" content="Andreas Loizou">
 
+<meta name="twitter:card" content="Daily Standup">
+<meta name="twitter:site" content="@andreas_lz">
+<meta name="twitter:creator" content="@andreas_lz">
+<meta name="twitter:url" content="http://the-simpsons-daily-scrum.aloizou.com/">
+<meta name="twitter:title" content="Daily Standup">
+<meta name="twitter:description" content="Use The Simpsons Daily Scrum, to find out who from your team should start the standup today in a fun way. Let's make Scrum fun again!">
+<meta name="twitter:image" content="the-simpsons-daily-scrum.aloizou.com/background.jpg">
+
 <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" rel="stylesheet">
 <style>
 	@import url(https://fonts.googleapis.com/css?family=Open+Sans:600);
