--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Created by Andreas Loizou
 		background-attachment: fixed;
 		background-color:#fed420;
 		background-repeat:no-repeat;
-		background-size:30% auto;
+		background-size:auto;
 	}
 
 	body {
@@ -68,10 +68,6 @@ Created by Andreas Loizou
 		text-align: center;
 		font-weight: 600;
 		overflow: hidden;
-		-webkit-background-size: 30%;
-		-moz-background-size: 30%;
-		-o-background-size: 30%;
-		background-size: 30%;
 	}
 
 	.text {
