--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@ Created by Andreas Loizou
 		text-align: center;
 		font-weight: 600;
 		overflow: hidden;
+		
+		-webkit-background-size: cover;
+		-moz-background-size: cover;
+		-o-background-size: cover;
+		background-size: cover;
 	}
 
 	.text {
