--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Created by Andreas Loizou
 
 	html {
 		background-image: url("background.jpg");
-		background-position: 56px 56px;
+		background-position: left center;
 		background-attachment: fixed;
 		background-color:#fed420;
 		background-repeat:no-repeat;
