--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Created by Andreas Loizou
 		background-attachment: fixed;
 		background-color:#fed420;
 		background-repeat:no-repeat;
-		background-size:20% auto;
+		background-size:50px 50px;
 	}
 
 	body {
