--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@ Created by Andreas Loizou
 
 	html {
 		background-image: url("background.jpg");
-		background-position: 0% 40%;
+		background-position: 0% 70%;
 		background-attachment: fixed;
 		background-color:#fed420;
 		background-repeat:no-repeat;
-		background-size:50px 50px;
+		background-size:20% auto;
 	}
 
 	body {
