--- a/index.html
+++ b/index.html
@@ -171,22 +171,10 @@ Created by Andreas Loizou
 			top: 30%;
 		}
 	}
-	
-	.navbar-fixed-top {
-		position: fixed;
-		right: 0;
-		left: 0;
-		z-index: 999;
-		font-size: 20px;
-		background-color:#efc47D;
-	}
 </style>
 </head>
 
 <body>
-		    <nav>
-<p>Want to customize it for your own team? Fork it now :)</p>
-    </nav>
 	<a href="https://github.com/lack3r/The-Simpsons-Daily-Scrum"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/8b6b8ccc6da3aa5722903da7b58eb5ab1081adee/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_orange_ff7600.png"></a>
 	<div class="page-wrap">
 		<div class="text">
@@ -199,7 +187,7 @@ Created by Andreas Loizou
 	</div>
 </div>
 <footer class="site-footer">
-	<p>Another thing made with <span class="pomegranate">❤︎</span> by <a href="https://www.linkedin.com/in/loizouandreas/">Andreas Loizou</a>. Find this on <a href="https://github.com/lack3r/The-Simpsons-Daily-Scrum">Github</a>.
+	<p>Another thing made with <span class="pomegranate">❤︎</span> by <a href="https://www.linkedin.com/in/loizouandreas/">Andreas Loizou</a>. Want to customize it for your team? <a href="https://github.com/lack3r/The-Simpsons-Daily-Scrum">Fork the project :)</a>.
 	</p>
 </footer>
 <div class="refresh"></div>
